Store failed nested checks in CastCheckResult