@@ -19,7 +19,6 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -153,6 +152,16 @@ public class IquodFlagsCheckTest {
                 CastCheckResult.builder()
                     .withCastNumber(123)
                     .withPassed(false)
+                    .withDependsOnFailedChecks(Map.of(
+                        failingTest,
+                        List.of(
+                            CheckNames.AOML_SPIKE.getName(),
+                            CheckNames.COTEDE_LOCATION_AT_SEA_TEST.getName()
+                        )
+                    )).withDependsOnFailedDepths(Map.of(
+                        failingTest,
+                        failedDepths
+                    ))
                     .withFailedDepths(failedDepths)
                     .build()
             ),
@@ -194,15 +203,15 @@ public class IquodFlagsCheckTest {
         .withPassed(failingTest.isBlank())
         .withFailedDepths(failingTest.isBlank() ? Collections.emptyList() : failedDepths)
         .withIquodFlags(expectedIquodFlags)
-        .withDependsOn(Map.of(
-            CheckNames.HIGH_TRUE_POSITIVE_RATE_GROUP.getName(),
-            failingTest.equals(CheckNames.HIGH_TRUE_POSITIVE_RATE_GROUP.getName()) ? failedDepths : new ArrayList<>(0),
-
-            CheckNames.LOW_TRUE_POSITIVE_RATE_GROUP.getName(),
-            failingTest.equals(CheckNames.LOW_TRUE_POSITIVE_RATE_GROUP.getName()) ? failedDepths : new ArrayList<>(0),
-
-            CheckNames.COMPROMISE_GROUP.getName(),
-            failingTest.equals(CheckNames.COMPROMISE_GROUP.getName()) ? failedDepths : new ArrayList<>(0)
+        .withDependsOnFailedDepths(failingTest.isBlank() ? Collections.emptyMap() : Map.of(
+            failingTest,
+            failedDepths
+        )).withDependsOnFailedChecks(failingTest.isBlank() ? Collections.emptyMap() : Map.of(
+            failingTest,
+            List.of(
+                CheckNames.AOML_SPIKE.getName(),
+                CheckNames.COTEDE_LOCATION_AT_SEA_TEST.getName()
+            )
         ))
         .build();
 
@@ -266,6 +275,16 @@ public class IquodFlagsCheckTest {
                     .withCastNumber(123)
                     .withPassed(false)
                     .withFailedDepths(failedDepths)
+                    .withDependsOnFailedChecks(Map.of(
+                        failingTest,
+                        List.of(
+                            CheckNames.AOML_SPIKE.getName(),
+                            CheckNames.COTEDE_LOCATION_AT_SEA_TEST.getName()
+                        )
+                    )).withDependsOnFailedDepths(Map.of(
+                        failingTest,
+                        failedDepths
+                    ))
                     .build()
             ),
             Encoders.bean(CastCheckResult.class)
@@ -306,15 +325,15 @@ public class IquodFlagsCheckTest {
         .withPassed(failingTest.isBlank())
         .withFailedDepths(failingTest.isBlank() ? Collections.emptyList() : failedDepths)
         .withIquodFlags(expectedIquodFlags)
-        .withDependsOn(Map.of(
-            CheckNames.HIGH_TRUE_POSITIVE_RATE_GROUP.getName(),
-            failingTest.equals(CheckNames.HIGH_TRUE_POSITIVE_RATE_GROUP.getName()) ? failedDepths : new ArrayList<>(0),
-
-            CheckNames.LOW_TRUE_POSITIVE_RATE_GROUP.getName(),
-            failingTest.equals(CheckNames.LOW_TRUE_POSITIVE_RATE_GROUP.getName()) ? failedDepths : new ArrayList<>(0),
-
-            CheckNames.COMPROMISE_GROUP.getName(),
-            failingTest.equals(CheckNames.COMPROMISE_GROUP.getName()) ? failedDepths : new ArrayList<>(0)
+        .withDependsOnFailedDepths(failingTest.isBlank() ? Collections.emptyMap() : Map.of(
+            failingTest,
+            failedDepths
+        )).withDependsOnFailedChecks(failingTest.isBlank() ? Collections.emptyMap() : Map.of(
+            failingTest,
+            List.of(
+                CheckNames.AOML_SPIKE.getName(),
+                CheckNames.COTEDE_LOCATION_AT_SEA_TEST.getName()
+            )
         ))
         .build();
 
@@ -362,6 +381,9 @@ public class IquodFlagsCheckTest {
                 .withPassed(false)
                 .withFailedDepths(List.of(
                     4, 10, 11
+                )).withDependsOnFailedChecks(Map.of(
+                    CheckNames.HIGH_TRUE_POSITIVE_RATE_GROUP.getName(),
+                    List.of(CheckNames.ARGO_GLOBAL_RANGE_CHECK.getName(), CheckNames.ICDC_AQC_05_STUCK_VALUE.getName(), CheckNames.ICDC_AQC_07_SPIKE_CHECK.getName())
                 ))
                 .build()
         ),
@@ -377,6 +399,9 @@ public class IquodFlagsCheckTest {
                 .withPassed(false)
                 .withFailedDepths(List.of(
                     2, 5, 11
+                )).withDependsOnFailedChecks(Map.of(
+                    CheckNames.COMPROMISE_GROUP.getName(),
+                    List.of(CheckNames.COTEDE_TUKEY_53H_CHECK.getName(), CheckNames.AOML_CLIMATOLOGY.getName())
                 ))
                 .build()
         ),
@@ -392,6 +417,9 @@ public class IquodFlagsCheckTest {
                 .withPassed(false)
                 .withFailedDepths(List.of(
                     1, 5, 11, 12
+                )).withDependsOnFailedChecks(Map.of(
+                    CheckNames.LOW_TRUE_POSITIVE_RATE_GROUP.getName(),
+                    List.of(CheckNames.COTEDE_ANOMALY_DETECTION_CHECK.getName(), CheckNames.WOD_LOOSE_LOCATION_AT_SEA_CHECK.getName())
                 ))
                 .build()
         ),
@@ -407,7 +435,7 @@ public class IquodFlagsCheckTest {
             1, 2, 4, 5, 10, 11, 12
         )).withIquodFlags(List.of(
             1, 4, 3, 1, 2, 4, 1, 1, 1, 1, 2, 4, 4, 1, 1
-        )).withDependsOn(Map.of(
+        )).withDependsOnFailedDepths(Map.of(
             CheckNames.HIGH_TRUE_POSITIVE_RATE_GROUP.getName(),
             List.of(4, 10, 11),
 
@@ -416,6 +444,15 @@ public class IquodFlagsCheckTest {
 
             CheckNames.COMPROMISE_GROUP.getName(),
             List.of(2, 5, 11)
+        )).withDependsOnFailedChecks(Map.of(
+            CheckNames.LOW_TRUE_POSITIVE_RATE_GROUP.getName(),
+            List.of(CheckNames.COTEDE_ANOMALY_DETECTION_CHECK.getName(), CheckNames.WOD_LOOSE_LOCATION_AT_SEA_CHECK.getName()),
+
+            CheckNames.COMPROMISE_GROUP.getName(),
+            List.of(CheckNames.COTEDE_TUKEY_53H_CHECK.getName(), CheckNames.AOML_CLIMATOLOGY.getName()),
+
+            CheckNames.HIGH_TRUE_POSITIVE_RATE_GROUP.getName(),
+            List.of(CheckNames.ARGO_GLOBAL_RANGE_CHECK.getName(), CheckNames.ICDC_AQC_05_STUCK_VALUE.getName(), CheckNames.ICDC_AQC_07_SPIKE_CHECK.getName())
         ))
         .build();
 
@@ -467,6 +504,12 @@ public class IquodFlagsCheckTest {
                 .withPassed(false)
                 .withFailedDepths(List.of(
                     4, 7, 11, 12
+                )).withDependsOnFailedDepths(Map.of(
+                    CheckNames.HIGH_TRUE_POSITIVE_RATE_GROUP.getName(),
+                    List.of(4, 7, 11, 12)
+                )).withDependsOnFailedChecks(Map.of(
+                    CheckNames.HIGH_TRUE_POSITIVE_RATE_GROUP.getName(),
+                    List.of(CheckNames.ARGO_GLOBAL_RANGE_CHECK.getName(), CheckNames.ICDC_AQC_05_STUCK_VALUE.getName(), CheckNames.ICDC_AQC_07_SPIKE_CHECK.getName())
                 ))
                 .build()
         ),
@@ -482,6 +525,12 @@ public class IquodFlagsCheckTest {
                 .withPassed(false)
                 .withFailedDepths(List.of(
                     7, 11, 12
+                )).withDependsOnFailedDepths(Map.of(
+                    CheckNames.COMPROMISE_GROUP.getName(),
+                    List.of(7, 11, 12)
+                )).withDependsOnFailedChecks(Map.of(
+                    CheckNames.COMPROMISE_GROUP.getName(),
+                    List.of(CheckNames.COTEDE_TUKEY_53H_CHECK.getName(), CheckNames.AOML_CLIMATOLOGY.getName())
                 ))
                 .build()
         ),
@@ -497,6 +546,12 @@ public class IquodFlagsCheckTest {
                 .withPassed(false)
                 .withFailedDepths(List.of(
                     11, 12
+                )).withDependsOnFailedDepths(Map.of(
+                    CheckNames.LOW_TRUE_POSITIVE_RATE_GROUP.getName(),
+                    List.of(11, 12)
+                )).withDependsOnFailedChecks(Map.of(
+                    CheckNames.LOW_TRUE_POSITIVE_RATE_GROUP.getName(),
+                    List.of(CheckNames.COTEDE_ANOMALY_DETECTION_CHECK.getName(), CheckNames.WOD_LOOSE_LOCATION_AT_SEA_CHECK.getName())
                 ))
                 .build()
         ),
@@ -512,7 +567,7 @@ public class IquodFlagsCheckTest {
             4, 7, 11, 12
         )).withIquodFlags(List.of(
             1, 1, 1, 1, 2, 2, 2, 3, 3, 3, 3, 4, 4, 4, 4
-        )).withDependsOn(Map.of(
+        )).withDependsOnFailedDepths(Map.of(
             CheckNames.HIGH_TRUE_POSITIVE_RATE_GROUP.getName(),
             List.of(4, 7, 11, 12),
 
@@ -521,6 +576,15 @@ public class IquodFlagsCheckTest {
 
             CheckNames.COMPROMISE_GROUP.getName(),
             List.of(7, 11, 12)
+        )).withDependsOnFailedChecks(Map.of(
+            CheckNames.LOW_TRUE_POSITIVE_RATE_GROUP.getName(),
+            List.of(CheckNames.COTEDE_ANOMALY_DETECTION_CHECK.getName(), CheckNames.WOD_LOOSE_LOCATION_AT_SEA_CHECK.getName()),
+
+            CheckNames.COMPROMISE_GROUP.getName(),
+            List.of(CheckNames.COTEDE_TUKEY_53H_CHECK.getName(), CheckNames.AOML_CLIMATOLOGY.getName()),
+
+            CheckNames.HIGH_TRUE_POSITIVE_RATE_GROUP.getName(),
+            List.of(CheckNames.ARGO_GLOBAL_RANGE_CHECK.getName(), CheckNames.ICDC_AQC_05_STUCK_VALUE.getName(), CheckNames.ICDC_AQC_07_SPIKE_CHECK.getName())
         ))
         .build();
 
